# BTC_kosteecks_fork

./: .gitignore  pyproject.toml  solution.ipynb
btc/: audio_dataset.py  btc_model.py  run_config.yaml  test.py  train.py
btc/test/: test.lab
btc/utils/: chord_fix.py  chords.py  hparams.py  preprocess.py  pytorch_utils.py
