[tool.poetry]
name = "kosteeck_s_btc_fork"
version = "0.1.0"
description = "kosteeck_s_btc_fork"
authors = ["enrupt@gmail.com"]
repository = "https://github.com/enrupt/BTC_kosteecks_fork"

[tool.poetry.dependencies]
python = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"